# bastproxy

./: .bandit  .editorconfig  .envrc  .envrc.local.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  AGENTS.md  AI_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  bandit-report.txt  bastproxy.py  dodo.py  mkdocs.yml  mudproxy.py  pyproject.toml  pytest.ini  requirements.txt  style_conventions.txt  todo.txt
.claude/: settings.json
.codex/: config.toml
.config/pyproject_template/: settings.toml
.devcontainer/: devcontainer.json
.gemini/: settings.json  settings.json.orig
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  copilot-instructions.md  dependabot.yml.example  pull_request_template.md  python-versions.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  chore.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml  refactor.yml
.github/workflows/: breaking-change-detection.yml  ci.yml  lint.yml  merge-gate.yml  pr-checks.yml  release.yml  security.yml  test.yml  testpypi.yml
devconfig/tmux/: bastproxy.tmuxp.yaml
docs/: api.md  examples.md  extensions.md  index.md  installation.md  migration.md  usage.md
docs/claude/: README.md  api_system.md  command_system.md  data_flow.md  event_system.md  event_system_findings.md  plugin_system.md  record_system.md  settings_system.md  timers_system.md  triggers_system.md
examples/: advanced_usage.py  basic_usage.py  cli_usage.py
info/: 2to3notes.txt  adding_commands.txt  api_naming_analysis.md  data_flow.txt  event_flow-pre-pluginloader.txt  loadingplugins.txt  logging_notes.txt  notes.txt  plugins.txt  plugins_loading.txt  startup_event_flow.txt  style_conventions.txt  telnet_notes.txt  todo.txt  upgrading.txt
libs/: api.py  argp.py  callback.py  colors.py  commands.py  dependency.py  event.py  imputils.py  io.py  log.py  messages.py  persistentdict.py  pluginloader.py  py.typed  queue.py  record.py  reloadutils.py  stack.py  task_logger.py  timing.py
libs/api/: __init__.py  _addapi.py  _api.py  _apiitem.py  _apistats.py  _functools.py
libs/asynch/: __init__.py  task_logger.py
libs/info/: __init__.py  loadedplugin.py  plugin.py  pluginfile.py  pluginpackage.py
libs/net/: __init__.py  _basetelnetoption.py  client.py  listeners.py  mud.py  networkdata.py  server.py  telnet.py  telnetlib.py
libs/net/telnetlib3/: __init__.py  accessories.py  server.py  server_base.py  stream_writer.py
libs/plugins/: dependency.py  imputils.py  loader.py  plugininfo.py  reloadutils.py
libs/records/: __init__.py
libs/records/managers/: __init__.py  changes.py  records.py  updates.py
libs/records/rtypes/: __init__.py  base.py  change.py  clientdata.py  cmdargs.py  eventargs.py  events.py  log.py  muddata.py  networkdata.py  toclient.py  tomud.py  update.py
libs/tracking/: __init__.py
libs/tracking/types/: _trackbase.py  trackedattributes.py  trackeddict.py  trackedlist.py
libs/tracking/utils/: attributes.py  changelog.py  trackable.py
other/scripts/: convertapi.py
plugins/: __init__.py  _baseplugin.py  _manager.py
plugins/_baseplugin/: __init__.py  _base.py  _baseplugin.py  _commands.py  _patch.py  _pluginhooks.py  _settings.py
plugins/_pluginm/: _plugin.py
plugins/aardwolf/: A102.py  _aardwolfbaseplugin.py  aarch.py  aardu.py  afk.py  aflags.py  connect.py  cp.py  ct.py  daily.py  eq.py  eqdb.py  gq.py  iceage.py  idle.py  itemid.py  itemkeep.py  itemu.py  level.py  malerts.py  mapper.py  mobk.py  move.py  pbalerts.py  quest.py  repop.py  scanh.py  skills.py  statdb.py  statmn.py  su.py  whois.py
plugins/client/: actions.py  alias.py  loop.py  ssub.py  vars.py
plugins/core/: __init__.py  _io.py  apihelp.py  clients.py  cmdq.py  colors.py  commands.py  errors.py  events.py  fuzzy.py  inspect.py  log.py  managers.py  msg.py  profile.py  proxy.py  sqldb.py  ssc.py  timers.py  triggers.py  utils.py  watch.py
plugins/core/apihelp/: __init__.py  _apihelp.py  _patch_base.py  _plugin.py
plugins/core/clients/: __init__.py  _clients.py  _plugin.py
plugins/core/cmdq/: __init__.py  _cmdq.py  _plugin.py
plugins/core/colors/: __init__.py  _colors.py  _plugin.py
plugins/core/commands/: __init__.py  _command.py  _commands.py  _formatter.py  _patch_base.py  _plugin.py  _utils.py
plugins/core/errors/: __init__.py  _errors.py  _plugin.py
plugins/core/events/: __init__.py  _event.py  _events.py  _plugin.py
plugins/core/fuzzy/: __init__.py  _fuzzy.py  _plugin.py
plugins/core/inspect/: __init__.py  _inspect.py  _plugin.py
plugins/core/log/: __init__.py  _custom_logger.py  _log.py  _plugin.py
plugins/core/managers/: __init__.py  _managers.py  _plugin.py
plugins/core/pluginm/: __init__.py  _plugin.py  _pluginm.py
plugins/core/proxy/: __init__.py  _plugin.py  _proxy.py
plugins/core/settings/: __init__.py  _patch_base.py  _settings.py  _settingsplugin.py
plugins/core/sqldb/: __init__.py  _plugin.py  _sqldb.py  _sqlite.py
plugins/docs/: docs.py
plugins/example/: a102ex.py  gmcpex.py  timerex.py  triggerex.py
plugins/net/: GMCP.py  MCCP2.py  TERMTYPE.py  clients.py  options.py  proxy.py
plugins/utils/: apihelp.py  gcoll.py  gmail.py  mail.py  pb.py
scripts/: lint.sh  security-scan.sh  typecheck.sh
src/bastproxy/: __init__.py  _version.py
src/plugins/: __init__.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: README.md  __init__.py  conftest.py  test_proxy_integration.py
tests/libs/: __init__.py  test_api.py  test_argp.py  test_callback.py  test_exceptions.py  test_persistentdict.py  test_queue.py  test_stack.py  test_timing.py
tests/plugins/: __init__.py  test_plugin_discovery.py
tools/: __init__.py
tools/doit/: __init__.py  adr.py  base.py  build.py  docs.py  git.py  github.py  install.py  maintenance.py  quality.py  release.py  security.py  template_clean.py  templates.py  testing.py
tools/pyproject_template/: __init__.py  check_template_updates.py  cleanup.py  configure.py  manage.py  repo_settings.py  settings.py  utils.py
(+235 files in other folders)
