[project]
# This is the name of your project. The first time you publish this
# package, this name will be registered for you. It will determine how
# users can install this project, e.g.:
#
# $ pip install bastproxy
#
# And where it will live on PyPI: https://pypi.org/project/bastproxy/
#
# There are some restrictions on what makes a valid project name
# specification here:
# https://packaging.python.org/specifications/core-metadata/#name
name = "bastproxy"  # Required

# Versions should comply with PEP 440:
# https://www.python.org/dev/peps/pep-0440/
#
# For a discussion on single-sourcing the version, see
# https://packaging.python.org/guides/single-sourcing-package-version/
version = "2.0.0"  # Required

# This is a one-line description or tagline of what your project does. This
# corresponds to the "Summary" metadata field:
# https://packaging.python.org/specifications/core-metadata/#summary
description = "A MUD proxy with plugin support for Python 3.12+"  # Optional

# This is an optional longer description of your project that represents
# the body of text which users will see when they visit PyPI.
#
# Often, this is the same as your README, so you can just read it in from
# that file directly (as we have already done above)
#
# This field corresponds to the "Description" metadata field:
# https://packaging.python.org/specifications/core-metadata/#description-optional
readme = "README.md" # Optional

# Specify the Python versions you support. In contrast to the
# 'Programming Language' classifiers above, 'pip install' will check this
# and refuse to install the project if the version does not match. See
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
requires-python = ">=3.12"

# List of authors
authors = [
    {name = "Bast", email = "bast@bastproxy.com"}
]

# List of maintainers
maintainers = [
    {name = "endavis", email = "endavis@users.noreply.github.com"}
]

# License - using SPDX identifier for modern setuptools
license = {text = "MIT"}

# Keywords for PyPI search
keywords = [
    "mud",
    "proxy",
    "telnet",
    "gaming",
    "mush",
    "mux",
    "moo",
    "asyncio",
    "plugin",
]

# PyPI classifiers
# See https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "Topic :: Communications",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

# Dependencies
dependencies = [
    "dumper>=1.2.0",
    "humanize>=4.11.0",
    "psutil>=6.0.0",
    "rapidfuzz>=3.10.0",
    "regex>=2024.9.11",
    "telnetlib3>=2.0.4",
]

# Project URLs
[project.urls]
Homepage = "https://github.com/endavis/bastproxy-py3"
Documentation = "https://github.com/endavis/bastproxy-py3/wiki"
Repository = "https://github.com/endavis/bastproxy-py3"
Issues = "https://github.com/endavis/bastproxy-py3/issues"
Changelog = "https://github.com/endavis/bastproxy-py3/releases"

# Entry points for CLI scripts
[project.scripts]
bastproxy = "mudproxy:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Automatically discover all packages
packages = {find = {where = ["."], include = ["libs*", "plugins*"]}}

[tool.setuptools.package-data]
libs = ["py.typed"]
plugins = ["py.typed"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["libs", "plugins"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true once codebase is fully typed
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true

# Allow gradual typing - can be made stricter over time
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

# Per-module options for external packages
[[tool.mypy.overrides]]
module = [
    "dumper.*",
    "telnetlib3.*",
    "rapidfuzz.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

# Enable comprehensive rule sets
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "D",     # pydocstyle
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "PL",    # Pylint
    "TRY",   # tryceratops
    "RUF",   # Ruff-specific rules
]

# Rules to ignore
ignore = [
    "D203",    # one-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
    "E501",    # line-too-long (handled by formatter)
    "TRY003",  # Avoid specifying long messages outside exception class
    "PLR0913", # Too many arguments to function call
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "ISC001",  # Conflicts with formatter
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "data",
    "evennia",
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "D",       # Don't require docstrings in tests
    "ARG",     # Unused arguments ok in tests (fixtures)
    "PLR2004", # Magic values ok in tests
]
"__init__.py" = [
    "F401",    # Unused imports ok in __init__.py (re-exports)
    "D104",    # Missing docstring in __init__.py
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party = ["libs", "plugins"]
required-imports = []

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.format]
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = 88

