[build-system]
requires = ["hatchling>=1.24", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "bastproxy"
description = "A MUD proxy with plugin support for Python 3.12+"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
dynamic = ["version"]
authors = [
    {name = "Bast", email = "bast@bastproxy.com"},
]
license = {file = "LICENSE"}
keywords = [
    "mud",
    "proxy",
    "telnet",
    "gaming",
    "mush",
    "mux",
    "moo",
    "asyncio",
    "plugin",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "Topic :: Communications",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "dumper>=1.2.0",
    "humanize>=4.11.0",
    "psutil>=6.0.0",
    "rapidfuzz>=3.10.0",
    "regex>=2024.9.11",
    "telnetlib3>=2.0.4",
    "pydatatracker",
]

[project.optional-dependencies]
dev = [
    "doit>=0.36.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "pre-commit>=3.7.0",
    "ruff>=0.5",
    "black>=23.0.0",
    "mkdocs-material>=9.5",
    "codespell>=2.2",
    "rich>=13.0",
    "pyproject-fmt>=2.0",
    "commitizen>=3.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "pyright>=1.1.0",
    "vulture>=2.11",
    "radon>=6.0",
    "griffe>=0.40",
]
security = [
    "pip-audit>=2.6",
    "bandit>=1.7",
    "pip-licenses>=4.0",
    "safety>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/endavis/bastproxy-py3"
Repository = "https://github.com/endavis/bastproxy-py3"
Documentation = "https://github.com/endavis/bastproxy-py3/wiki"
Issues = "https://github.com/endavis/bastproxy-py3/issues"
Changelog = "https://github.com/endavis/bastproxy-py3/releases"

[project.scripts]
bastproxy = "bastproxy:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bastproxy"]

[tool.hatch.build.targets.wheel.force-include]
"src/bastproxy/libs/py.typed" = "bastproxy/libs/py.typed"
"src/bastproxy/plugins/py.typed" = "bastproxy/plugins/py.typed"

[tool.hatch.build]
exclude = [
    "/tests",
    "/teststuff",
    "/data",
    "/evennia",
    "/devconfig",
    "/info",
    "/tmp",
    "/scripts",
    "/.github",
    "/.devcontainer",
    "/.vscode",
]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^(?:v|d)(?P<version>.+)$"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/bastproxy/_version.py"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/_version.py"]
exclude = [
    "data",
    "evennia",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations (type hints)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "RUF",    # Ruff-specific rules
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async
]
ignore = [
    "ANN",    # TODO: Enable after adding type annotations to codebase
    "E501",   # Line too long - existing code uses longer lines
    "N",      # TODO: Enable after fixing naming conventions
    "B019",   # lru_cache on methods - intentional for API caching
    "SIM108", # TODO: Refactor if/else to ternary where appropriate
]

[tool.ruff.lint.per-file-ignores]
"tools/pyproject_template/*.py" = [
    "ANN401",  # Any return type for dynamic GitHub API responses
    "RUF022",  # __all__ intentionally grouped by category, not sorted
]
"tools/doit/*.py" = [
    "ANN401",  # Any return type for dynamic doit task responses
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function
]
"tests/**/*.py" = [
    "ANN",     # No type annotations required in tests
]
"**/__init__.py" = [
    "F401",    # Unused imports - intentional re-exports
    "E402",    # Module level import not at top - needed for path setup
]

[tool.ruff.lint.isort]
known-first-party = ["bastproxy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
mypy_path = ["src"]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "doit.*",
    "dumper.*",
    "telnetlib3.*",
    "rapidfuzz.*",
    "regex",
    "psutil",
    "psutil._common",
    "pydatatracker",
    "yaml",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "bastproxy.plugins.test.*",
    "bastproxy.plugins.debug.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "bastproxy.libs.net.*",
    "bastproxy.libs.api.*",
    "bastproxy.libs.records.*",
    "bastproxy.libs.asynch.*",
    "bastproxy.libs.plugins.*",
    "bastproxy.libs.callback",
    "bastproxy.libs.persistentdict",
    "bastproxy.libs.timing",
    "bastproxy.plugins.core.*",
    "bastproxy.plugins._baseplugin.*",
    "bastproxy.plugins.core.*",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["bastproxy"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = [
    "tests/",
    ".venv/",
    "venv/",
    "evennia/",
    "data/",
    "teststuff/",
    "tools/pyproject_template/",
]
skips = ["B301", "B307", "B401", "B403", "B603", "B604", "B606", "B607", "B608"]

[tool.codespell]
skip = "tmp,.venv,.git,*.lock,*.pyc,__pycache__"
# Pre-existing words to ignore:
# - WONT: Telnet protocol command (IAC WONT)
# - acn: Variable name abbreviation
# - formt: Variable name
# - unitialize: Method name (plugin lifecycle)
ignore-words-list = "crate,wont,acn,formt,unitialize,seperator,seperators,currenty,therefor,neccessary,neccesarily,onyl,verfiy,evauluation,expresion,depencency,doesnt"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "v$version"
version_provider = "scm"

[tool.pyright]
include = ["src", "tests", "*.py", "tools"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]
